<resources>
    <string name="app_name">Rss Feed Reader</string>
    <!-- general -->
    <!--Buttons -->
    <string name="btn_title_save">Save</string>
    <string name="btn_title_delete">Delete</string>
    <string name="btn_forgot_password">Forgot your password</string>
    <string name="btn_sign_up">Register</string>
    <string name="btn_sign_in">Login</string>

    <!-- Fragment channel list -->
    <string name="item_channel_list_title">Title :&#160;</string>
    <string name="item_channel_list_url">Url :&#160;</string>
    <string name="dialog_confirm_remove_channel_title">Delete channel</string>
    <string name="dialog_confirm_remove_channel_msg">Are you sure want to delete %s channel?</string>

    <!-- Activity channel details -->
    <string name="activity_channel_details_title_add_new_channel">Add new channel</string>

    <!-- Fragment Channel details-->
    <string name="fragment_channel_details_label_title">Channel title</string>
    <string name="fragment_channel_details_label_url">Channel url</string>

    <string name="title_activity_channel_list">Channels List</string>
    <string name="title_activity_channel_details">Channel Details</string>
    <string name="action_settings">Settings</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="settings_activity_label">Settings</string>

    <string name="preferences_channels_list">Channels list</string>
    <string name="preferences_channels_list_title">Manage channels list</string>
    <string name="preferences_channels_list_description">Add, edit or remove channels</string>

    <string name="preferences_automated_refresh">Automated Refresh</string>
    <string name="preferences_perform_refresh_summary">Enable or disable automatic refresh of all feeds</string>
    <string name="preferences_perform_refresh_title">Enabled</string>
    <string name="preferences_refresh_interval_summary">Interval between two automated refreshes</string>
    <string name="preferences_refresh_interval_title">Refresh interval</string>
    <string name="preferences_refresh_on_open_summary">Refreshes all feeds after opening the application</string>
    <string name="preferences_refresh_on_open_title">Refresh Feeds on open</string>
    <string name="preferences_notifications">Notifications</string>
    <string name="preferences_perform_notifications_summary">Enable or disable notifications in case of new feed content</string>
    <string name="preferences_perform_notifications_title">Enabled</string>
    <string name="preferences_notifications_ringtone_dialog_message">Customise Notification Ringtone for you</string>
    <string name="preferences_notification_ringtone_dialog_title">Notification Ringtone</string>
    <string name="preferences_notification_ringtone_summary">Customise Notification Ringtone for you</string>
    <string name="preferences_notifications_ringtone_title">Ringtone</string>
    <string name="preferences_notifications_vibration_summary">Enable or disable vibration on new feed content</string>
    <string name="preferences_notifications_vibration_title">Vibrate</string>
    <string name="preferences_content">Content Presentations</string>
    <string name="preferences_content_unread_summary">Show unread feeds entries above read entries</string>
    <string name="preferences_content_unread_title">Unread first</string>
    <string name="preferences_content_availability_period_summary">The entries that are older than the given date will be deleted</string>
    <string name="preferences_content_availability_period_title">Time the entry will be kept</string>

    <!--SignUp and SignIn Activities-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="email_error">Email is not properly formatted</string>
    <string name="password_error">Password should not be empty</string>
    <string name="btn_link_to_signup">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already Registered. Login Me!</string>
    <string name="sign_up_activity_title">Sign Up</string>
    <string name="sign_in_activity_title">Sign In</string>

    <!--Reset Password Activity-->
    <string name="activity_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">Please enter your registered email so we can send you password reset instructions</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back</string>
    <string name="email_sent_message">We have sent you instructions to reset your password</string>
    <string name="snackbar_control_OK">OK</string>
    <string name="progress_message_authenticating">Authenticating...</string>
    <string name="progress_message_loading">Loading...</string>

    <string-array name="refresh_interval">
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>1 day</item>
    </string-array>

    <!-- Values in minutes !-->
    <string-array name="refresh_interval_values">
        <item>1</item>
        <item>5</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>360</item>
        <item>720</item>
        <item>1440</item>
    </string-array>

    <string-array name="entry_availability">
        <item>1 day</item>
        <item>2 days</item>
        <item>4 days</item>
        <item>1 week</item>
        <item>2 weeks</item>
        <item>1 month</item>
        <item>3 months</item>
    </string-array>

    <!-- Values in days !-->
    <string-array name="entry_availability_value">
        <item>1</item>
        <item>2</item>
        <item>4</item>
        <item>7</item>
        <item>14</item>
        <item>30</item>
        <item>90</item>
    </string-array>

    <!-- Left Side Menu -->
    <string name="menu_all_news_item">All News</string>
    <string name="menu_news_list_item">List of News</string>
    <string name="menu_settings_item">Settings</string>
    <string name="menu_help_item">Help</string>
    <string name="menu_feedback_item">Feedback</string>
    <string name="menu_default_username">John Doe</string>

    <!-- Accessibility resources -->
    <string name="menu_toggle_open">Open toggle</string>
    <string name="menu_toggle_close">Close toggle</string>
    <string name="menu_icon_description">Profile image</string>
</resources>
