<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_all_news_item"
            android:title="@string/menu_all_news_item" />
    </group>

    <group
        android:id="@+id/menu_news_list_item"
        android:checkableBehavior="single" />

    <group
        android:checkableBehavior="single"
        android:menuCategory="secondary">
        <item
            android:id="@+id/menu_settings_item"
            android:title="@string/menu_settings_item" />

        <item
            android:id="@+id/menu_help_item"
            android:title="@string/menu_help_item" />

        <item
            android:id="@+id/menu_feedback_item"
            android:title="@string/menu_feedback_item" />
    </group>

    <group
        android:checkableBehavior="single"
        android:menuCategory="secondary"
        android:id="@+id/menu_group_signing">
        <item
            android:id="@+id/menu_signin_item"
            android:title="@string/sign_in_activity_title" />

        <item
            android:id="@+id/menu_signout_item"
            android:title="@string/menu_sign_out" />
    </group>
</menu>